traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:35: error: reassignment to val
    abscisse = abscisse + 1
             ^TraversalZigZag:43: error: reassignment to val
    abscisse = abscisse - 1
             ^